admin panel updated version 2